[package]
name = "rly"
description = "Run shell commands concurrently with ease. Currently only a CLI tool."
readme = "README.md"
authors = ["Lucas Jenß <crates-io@x3ro.de>"]
license = "Apache-2.0"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/x3ro/rly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
clap = { version  = "4.0.32", features = ["derive", "wrap_help"] }
anyhow = "1.0.92"
serde = { version = "1.0.185" }
serde_derive = "1.0.152"
pretty_assertions = "1.4.1"
chrono = "0.4.23"
colored = "2.0.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
nix = "0.23"

log = "0.4.22"
pretty_env_logger = "0.4.0"

[dev-dependencies]
edit-distance = "2.1.0"
