[package]
name = "rly"
description = "Run shell commands concurrently with ease. Currently only a CLI tool."
readme = "README.md"
authors = ["Lucas Jenß <crates-io@x3ro.de>"]
license = "Apache-2.0"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/x3ro/rly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
clap = { version  = "4.5.37", features = ["derive", "wrap_help"] }
anyhow = "1.0.98"
serde = { version = "1.0.219" }
serde_derive = "1.0.214"
pretty_assertions = "1.4.1"
chrono = "0.4.41"
colored = "3.0.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
nix = { version = "0.30", features=["process", "signal"] }

log = "0.4.27"
pretty_env_logger = "0.5.0"

[dev-dependencies]
edit-distance = "2.1.3"
